# investment-intelligence

./: .gitignore  SKILL.md
.claude/: settings.json  settings.local.json
.claude/agents/: reviewer.md
.claude/hooks/: check-float-finance.py
.claude/skills/benchmark-comparison/: SKILL.md  examples.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/correctness-review/: SKILL.md
.claude/skills/cost-basis-engine/: SKILL.md  test_vectors.json
.claude/skills/data-integrity/: SKILL.md
.claude/skills/dividend-income-analyzer/: SKILL.md
.claude/skills/equity-thesis-summarizer/: SKILL.md  examples.md
.claude/skills/financial-formula-guard/: SKILL.md  examples.md  (+1 more)
chapter_2/: .gitignore
chapter_2/backend/: go.mod
chapter_2/data-service/: pyproject.toml
misc/: snapshot_chapter_2.setting.local.json
snapshots/chapter_2/: .gitignore
snapshots/chapter_3/: CLAUDE.md
snapshots/chapter_4/: .env.example  docker-compose.yml
src/: .env.example  CLAUDE.md  docker-compose.yml
src/backend/: .dockerignore  Dockerfile
src/data-service/: .dockerignore  Dockerfile  pyproject.toml
src/data-service/src/: main.py
src/data-service/src/models/: alpaca.py  extract.py  price.py
src/data-service/src/routers/: extract.py  prices.py
src/data-service/src/services/: alpaca_service.py  extraction_service.py  market_data.py
src/data-service/tests/: test_alpaca.py  test_historical_prices.py  test_prices.py
src/database/: init.sql  seed_portfolio.csv
src/docs/: PRD_File_Import_LLM_Extraction.md
src/frontend/: Dockerfile  package-lock.json  package.json
(+167 files in other folders)
