[project]
name = "data-service"
version = "0.1.0"
description = "Stock price data service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=0.2.50",
    "pydantic>=2.10.0",
    "tenacity>=8.2.0",
    "pandas>=3.0.1",
    "alpaca-py>=0.35.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
